--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -12,4 +12,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.main.allow-circular-references=true
+#JWT Configuration
+security.jwt.secret-key=000
+security.jwt.expiration-time=3600000
